# genshin-feed

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  build-website.sh  feed.yml  generate_feed.py  prepare-hugo-build.sh  pyproject.toml
.github/workflows/: generate.yml
feed/: atom-de-all-articles.xml  atom-de-events.xml  atom-de-info.xml  atom-de-latest.xml  atom-de-updates.xml  atom-en-all-articles.xml  atom-en-events.xml  atom-en-info.xml  atom-en-latest.xml  atom-en-updates.xml  atom-es-all-articles.xml  atom-es-events.xml  atom-es-info.xml  atom-es-latest.xml  atom-es-updates.xml  atom-fr-all-articles.xml  atom-fr-events.xml  atom-fr-info.xml  atom-fr-latest.xml  atom-fr-updates.xml  atom-id-all-articles.xml  atom-id-events.xml  atom-id-info.xml  atom-id-latest.xml  atom-id-updates.xml  atom-ja-all-articles.xml  atom-ja-events.xml  atom-ja-info.xml  atom-ja-latest.xml  atom-ja-updates.xml  atom-ko-all-articles.xml  atom-ko-events.xml  atom-ko-info.xml  atom-ko-latest.xml  atom-ko-updates.xml  atom-pt-all-articles.xml  atom-pt-events.xml  atom-pt-info.xml  atom-pt-latest.xml  atom-pt-updates.xml  (+81 more)
site/: config.toml
site/assets/js/: app.js
site/assets/scss/: app.scss
site/content/: _index.md
site/layouts/: index.html
site/layouts/partials/: feeds.html  footer.html  head.html  header.html  meta-feeds.html
site/layouts/shortcodes/: feed-table.html
