[tool.poetry]
name = "genshin-feed"
version = "0.1.0"
description = "A Simple script that generate RSS/Atom feeds for the official Genshin Impact news blog"
authors = ["Michael Vieira <dev+genshinfeed@mvieira.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
feedgen = "^0.9.0"
PyYAML = "^5.4.1"
httpx = "^0.19.0"
pytz = "^2021.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
