[tool.poetry]
name = "genshin-feed"
version = "0.1.0"
description = "A Simple script that generate RSS/Atom feeds for the official Genshin Impact news blog"
authors = ["Michael Vieira <dev+genshinfeed@mvieira.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
feedgen = "^0.9.0"
PyYAML = "^5.4.1"
httpx = "^0.19.0"
pytz = "^2021.1"
pycountry = "^20.7.3"
lxml = "^4.9.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.269"

[tool.ruff]
select = ["E", "W", "I"]
fixable = ["E", "W", "I"]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
